--- a/ini/features.ini
+++ b/ini/features.ini
@@ -206,6 +206,7 @@ DGUS_LCD_UI_MKS                        = build_src_filter=+<src/lcd/extui/dgus/m
 DGUS_LCD_UI_ORIGIN                     = build_src_filter=+<src/lcd/extui/dgus/origin>
 DGUS_LCD_UI_IA_CREALITY                = build_src_filter=+<src/lcd/extui/ia_creality>
 EXTUI_EXAMPLE                          = build_src_filter=+<src/lcd/extui/example>
+Force10SProDisplay                     = build_src_filter=+<src/lcd/extui/creality_DWIN.cpp>
 TOUCH_UI_FTDI_EVE                      = build_src_filter=+<src/lcd/extui/ftdi_eve_touch_ui>
 MALYAN_LCD                             = build_src_filter=+<src/lcd/extui/malyan>
 NEXTION_TFT                            = build_src_filter=+<src/lcd/extui/nextion>
