--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,10 @@ __pycache__
 tags
 *.logs
 *.bak
+config/Configuration-old.h
+config/Configuration_adv-old.h
+Marlin/Configuration - Kopie.h
+Marlin/Configuration-Stock.h
+/.vscode
+Marlin/Configuration_adv - Kopie.h
+Marlin/Configuration_adv-Stock.h
